--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<HTML>Hello World</HTML>
+<html>
+<ul>
+  {% for post in site.posts limit: 5 %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
+</html>
